info displaying on page as expected after being called by fetch and be brought with innerhtml

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,18 @@
+/* UTILITY CLASSES */
+
+.bold {
+    font-weight: bold;
+}
+
+.name-fs {
+    font-size: 2rem;
+}
+
 /* BODY */ 
 
-.sidesPadd {
+.body-class {
     padding: 2rem;
+    background-color: rgb(230, 230, 230);
 }
 
 /* TITLE */ 
@@ -13,3 +24,9 @@
 
 /* MAIN */ 
 
+.main-grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-columns: 1fr;
+}
