--- a/src/css/normalizer.css
+++ b/src/css/normalizer.css
@@ -22,6 +22,7 @@
   
   body {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
   }
   
   /**
@@ -37,9 +38,14 @@
    * `article` contexts in Chrome, Firefox, and Safari.
    */
   
-  h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+    font-size: inherit;
+    margin: 0;
   }
   
   /* Grouping content
