--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,21 +31,31 @@
 .main-title {
     text-transform: uppercase;
     font-size: 1em;
-    margin: 0 0 2rem 2rem;
     color: rgb(0 0 0 / 58%);
     font-weight: 500;
 }
 
 /* MAIN */ 
 
-.main-grid {
+#filter-to-right {
+    margin-left: auto;
+    grid-column: 3/4;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: max-content;
+    justify-content: center;
+    grid-template-rows: 2rem;   
+}
+
+.grid-main {
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(3, 18rem);
     grid-auto-columns: 1fr;
-    grid-template-rows: repeat(4, 7rem);
+    grid-template-rows: 1rem repeat(4, 7rem);
     grid-auto-rows: 1fr;
-    justify-content: center;
 }
 
 .card {
