--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,29 +33,31 @@
     font-size: 1em;
     color: rgb(0 0 0 / 58%);
     font-weight: 500;
+    align-self: flex-start;
 }
 
 /* MAIN */ 
 
 #filter-to-right {
     margin-left: auto;
-    grid-column: 3/4;
+    grid-column-end: -1;
+    align-self: flex-end;
 }
 
 .grid {
     display: grid;
-    grid-template-columns: max-content;
-    justify-content: center;
+    grid-template-columns: 1fr;
     grid-template-rows: 2rem;   
 }
 
 .grid-main {
     display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(3, 18rem);
+    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(290px, max-content));
     grid-auto-columns: 1fr;
-    grid-template-rows: 1rem repeat(4, 7rem);
-    grid-auto-rows: 1fr;
+    grid-template-rows: 3rem;
+    grid-auto-rows: 9rem;
+    justify-content: center;
 }
 
 .card {
@@ -90,7 +92,8 @@
 
 .img-style {
     border-radius: 50%;
-    margin-inline: 1rem;
+    width: 30%;
+    margin: 1rem;
 }
 
 .img-style-modal {
@@ -154,9 +157,10 @@
 }
 
 .arrow-right {
-    right: 30rem;
     position: absolute;
-    bottom: 12rem;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
     font-size: 4rem;
     color: black;
     background-color: white;
@@ -166,9 +170,10 @@
 }
 
 .arrow-left {
-    left: 30rem;
     position: absolute;
-    bottom: 12rem;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
     font-size: 4rem;
     color: black;
     background-color: white;
@@ -195,3 +200,36 @@
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
+/* MEDIA QUERIES */
+
+@media (max-width: 700px) {
+    .body-class {
+        padding: 1rem;
+    }
+    .grid-main {
+        grid-template-columns: repeat(1, minmax(290px, max-content));
+        grid-auto-columns: 1fr;
+        grid-template-rows: 2rem 2rem;
+        gap: 1rem;
+    }
+    .arrow-right {
+        left: 83%;
+        font-size: 2rem;
+    }
+    .arrow-left {
+        left: 17%;
+        font-size: 2rem;
+    }
+}
+@media (max-width: 400px) {
+    .arrow-right {
+        background-color: #1c16040f;
+        left: 83%;
+        font-size: 2rem;
+    }
+    .arrow-left {
+        background-color: #1c16040f;
+        left: 17%;
+        font-size: 2rem;
+    }
+}
