--- a/src/css/style.css
+++ b/src/css/style.css
@@ -202,6 +202,12 @@
 
 /* MEDIA QUERIES */
 
+@media (min-width: 1200px) {
+    .grid-main {
+        grid-template-columns: repeat(3, minmax(290px, max-content));
+    }
+}
+
 @media (max-width: 700px) {
     .body-class {
         padding: 1rem;
